# management-system

./: .gitignore  CMakeLists.txt  main.c
includes/: database.h  file_checker.h
includes/handler/: colour.h  database.h  file.h
includes/resource/: console.h  database.h  file_checker.h  test.h
includes/screens/: admin.h  setupApp.h
includes/sql/: sqlite3.h
includes/test/: test.h
resource/: console.c  database.c  file_checker.c  test.c
src/: main.c
src/resource/: database.c  file_checker.c
src/screens/: admin.c  setupApp.c
test/: main_test.c
